--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <h1>main page</h1>
     <nav>
         <ul>
-            <li href="index.html">main page/page one</li>
-            <li href="./secondpage.html">Page 2</li>
-            <li href="./thirdpage.html">Page 3</li>
+            <li><a href="./index.html">page one</a></li>
+            <li><a href="./secondpage.html">page two</a></li>
+            <li><a href="./thirdpage.html">page two</a></li>
         </ul>
     </nav>
 
